--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Project</title>
 </head>
-<body.>
+<body>
     <h1>Sample Project</h1>
     <p>Lorem, ipsum dolor sit amet consectetur ngadipisici elit.
        Sint vitae, libero quae quasi nemo dignissimos consectetur
